JCL-65: test module (#116)
* test module creation
* moved json tests to a common module and parameterized tests
* httpService tests & removing of okHttp and httpClient tests
*  rdf service tests
* changed structure of tests